--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     href="img/apple-touch-icon-114x114.png"
   />
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
   <link
     rel="stylesheet"
     type="text/css"
