--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,7 +58,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BoilerTrade</title>
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <div id="root"></div>
